# assignment-portal

./: .gitignore  README.md  core.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
anycanvas/: constants.py  core.py  models.py  utils.py
